--- a/pages/pool.html
+++ b/pages/pool.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Encuesta</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Encuestas</h1>
+        <nav></nav>
+    </header>
+
 </body>
 </html>
