cambio de color en las fuentes

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body id="grid_container">
     <header>
-    <h1>Cinefan</h1>
-    <h2>Películas Populares</h2>
+    <h1 class="txt">Cinefan</h1>
+    <h2 class="txt">Películas Populares</h2>
         <nav>
             <a href="pages/pool.html" class="nav__a" target="_blank" rel="noopener">Próxima   semana</a>
             <a href="pages/foro.html" class="nav__a" target="_blank" rel="noopener">Foro</a>
