html de las sub-paginas del sitio

--- a/pages/pool.html
+++ b/pages/pool.html
@@ -8,8 +8,20 @@
 <body>
     <header>
         <h1>Encuestas</h1>
-        <nav></nav>
+        <nav>
+            <a href="../index.html">Volver</a>
+        </nav>
+        <section>
+            <a href="../index.html" class="header__section">
+                <img src="../assets/ozark.png" alt="pelicula">
+            </a>
+            <a href="../index.html" class="header__section">
+                <img src="../assets/vikings.png" alt="pelicula">
+            </a>
+            <a href="../index.html" class="header__section">
+                <img src="../assets/xCel-AVbY_1200x0__1.png" alt="pelicula">
+            </a>
+        </section>
     </header>
-
 </body>
 </html>
