--- a/pages/pool.html
+++ b/pages/pool.html
@@ -3,25 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link href="../style.css" rel="stylesheet">
     <title>Encuesta</title>
 </head>
 <body>
-    <header>
-        <h1>Encuestas</h1>
-        <nav>
-            <a href="../index.html">Volver</a>
-        </nav>
-        <section>
-            <a href="../index.html" class="header__section">
-                <img src="../assets/ozark.png" alt="pelicula">
-            </a>
-            <a href="../index.html" class="header__section">
-                <img src="../assets/vikings.png" alt="pelicula">
-            </a>
-            <a href="../index.html" class="header__section">
-                <img src="../assets/xCel-AVbY_1200x0__1.png" alt="pelicula">
-            </a>
-        </section>
+    <header class="encuesta-header">
+        <a href="../index.html" class="volver">Volver</a>
+        <h1 class="titulo-encuesta">Encuestas</h1>
     </header>
+    <div id="carouselExample-1" class="carousel slide">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="../assets/ozark.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="../assets/vikings.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="../assets/xCel-AVbY_1200x0__1.png" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample-1" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample-1" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <footer>
+        <form class="form-reseña-pool">
+            <label>Pelicula:</label>
+            <select class="form-select" aria-label="Default select example">
+                <option selected>Ozark</option>
+                <option value="1">Baby Reindeer</option>
+                <option value="2">Vikingos</option>
+                </select>
+            <button type="submit" value="pool_answer" class="button-pool">Enviar</button>
+        </form>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
