--- a/index.html
+++ b/index.html
@@ -28,27 +28,22 @@
         <img src="assets/carouselitem.png" class="d-block w-100" alt="banner 3">
         </div>
     </article>
-
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
     </button>
-
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
     </section>
-
-    <div class="form_container">
-    <h1 class="foo__h1">¡Envíanos tu feedback!</h1>
+<div class="form_container">
+    <h1>¡Envíanos tu feedback!</h1>
     <form class="form-reseña" action="">
         <label class="form-reseña__label">Nombre</label>
         <input class="form-reseña__input" type="text">
-
         <label class="form-reseña__label">Email</label>
         <input class="form-reseña__input" type="email">
-
         <label class="form-reseña__label">Película</label>
         <select class="form-select" aria-label="Default select example">
         <option selected>Open this select menu</option>
@@ -56,17 +51,13 @@
         <option value="2">Black Mirror</option>
         <option value="3">El secreto de los 3 cuerpos</option>
         </select>
-
         <label class="form-reseña__label">¡Contanos qué te pareció!</label>
         <textarea class="form-reseña--feedback" type="text"></textarea>
-
         <button type="submit" class="form-reseña__button">Enviar</button>
     </form>
-    </div>
-
+</div>
     <footer class="foo">
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
