--- a/pages/foro.html
+++ b/pages/foro.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link href="../style.css" rel="stylesheet">
     <title>Foro</title>
 </head>
@@ -26,11 +27,16 @@
             <p>Inicia un debate sobre la pelicula que para vos es la mas esperada este año</p>
         </article>
         <h2 class="encabezado">Añadir un nuevo tema de debate</h2>
-        <form action="#" method="post" class="forum-container__form">
-            <input type="text" name="titulo" placeholder="Titulo del tema" required>
-            <textarea name="Descripcion del tema a debatir" class="form__textarea" required></textarea>
-            <input type="submit" value="añadir tema" class="form__input">
-        </form>
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Titulo del tema</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingrese titulo del tema" required>
+        </div>
+        <div class="mb-3">  
+            <label for="exampleFormControlTextarea1" class="form-label">Descripcion del tema</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
+            <button type="submit" class="mb-3__button">Enviar</button>
+        </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
