cambios realizados:finalizacion de html y css de todas las paginas del sitio

--- a/pages/pool.html
+++ b/pages/pool.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="encuesta-header">
-        <a href="../index.html" class="volver">Volver</a>
+        <a href="../index.html" class="header__a">Volver</a>
         <h1 class="titulo-encuesta">Encuestas</h1>
     </header>
     <div id="carouselExample-1" class="carousel slide">
@@ -33,16 +33,14 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <footer>
-        <form class="form-reseña-pool">
-            <label>Pelicula:</label>
-            <select class="form-select" aria-label="Default select example">
-                <option selected>Ozark</option>
-                <option value="1">Baby Reindeer</option>
-                <option value="2">Vikingos</option>
-                </select>
-            <button type="submit" value="pool_answer" class="button-pool">Enviar</button>
-        </form>
+    <footer class="foo-pool">
+        <h2 class="txt">Envianos tu encuesta</h2>
+        <select class="form-select" aria-label="Default select example">
+            <option selected>vikingos</option>
+            <option value="1">Ozark</option>
+            <option value="2">Baby raindeer</option>
+        </select>
+        <button type="submit" class="foo-pool__button">Enviar</button>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
