solucionando errores de media query

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </button>
     </section>
 <div class="form_container">
-    <h1>¡Envíanos tu feedback!</h1>
     <form class="form-reseña" action="">
+        <h1>¡Envíanos tu feedback!</h1>
         <label class="form-reseña__label">Nombre</label>
         <input class="form-reseña__input" type="text">
         <label class="form-reseña__label">Email</label>
@@ -56,9 +56,9 @@
         <button type="submit" class="form-reseña__button">Enviar</button>
     </form>
 </div>
-    <footer class="foo">
-        <p>Dev By Rado</p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+<footer class="foo">
+    <p>Powered By Rado </p>
+</footer>
 </body>
 </html>
